修改runutil2，修正更新状态1和状态3方法